--- a/1.库仑定律.md
+++ b/1.库仑定律.md
@@ -1,1 +1,1 @@
-**库仑定律**：在**真空**中，两个静止的**点电荷**$ q<sup>1</sup> $，和$ q<sup>2</sup> $之间的相互**作用力的大小**和$ q<sup>1</sup> $与$ q<sup>2</sup>的乘积成正比，与它们之间的距离$ r $的平方成反比；**作用力的方向**沿着它们的联线，同号电荷相斥，异号电荷相吸。  
+**库仑定律**：在**真空**中，两个静止的**点电荷**$$ q<sub>1</sub> $$，和$$ q<sub>2</sub> $$之间的相互**作用力的大小**和$$ q<sub>1</sub> $$与$$ q<sub>2</sub>的乘积成正比，与它们之间的距离$$ r $$的平方成反比；**作用力的方向**沿着它们的联线，同号电荷相斥，异号电荷相吸。  
