Update item 1 for LaTeX

--- a/1.库仑定律.md
+++ b/1.库仑定律.md
@@ -1,1 +1,1 @@
-**库仑定律**：在**真空**中，两个静止的**点电荷**$$ q<sub>1</sub> $$，和$$ q<sub>2</sub> $$之间的相互**作用力的大小**和$$ q<sub>1</sub> $$与$$ q<sub>2</sub>的乘积成正比，与它们之间的距离$$ r $$的平方成反比；**作用力的方向**沿着它们的联线，同号电荷相斥，异号电荷相吸。  
+**库仑定律**：在**真空**中，两个静止的**点电荷**<a href="https://www.codecogs.com/eqnedit.php?latex=q_{1}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{1}" title="q_{1}" /></a>，和<a href="https://www.codecogs.com/eqnedit.php?latex=q_{2}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{2}" title="q_{2}" /></a>之间的相互**作用力的大小**和<a href="https://www.codecogs.com/eqnedit.php?latex=q_{1}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{1}" title="q_{1}" /></a>与<a href="https://www.codecogs.com/eqnedit.php?latex=q_{2}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{2}" title="q_{2}" /></a>的乘积成正比，与它们之间的距离<a href="https://www.codecogs.com/eqnedit.php?latex=r" target="_blank"><img src="https://latex.codecogs.com/gif.latex?r" title="r" /></a>平方成反比；**作用力的方向**沿着它们的联线，同号电荷相斥，异号电荷相吸。  
