--- a/1.库仑定律.md
+++ b/1.库仑定律.md
@@ -34,4 +34,12 @@
   - 关于叠加原理：在库仑定律中，如果保持其中一个电荷不变，而将另一个电荷增大数倍，那相互间的作用力也将增大同样的倍数。这一事实表明，在库仑定律中暗含着电荷在效果上是可加的。既然电荷具有可加性，则可将其中一个电荷分为若干个电荷，并都放置在其所在的位置上。所以库伦定律可以写为  
   <a href="https://www.codecogs.com/eqnedit.php?latex=F_{12}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q_{1}\left&space;(&space;q'_{2}&plus;q''_{2}&space;\right&space;)}{r_{12}^{3}}\vec{r_{12}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\left&space;(&space;\frac{q_{1}q'_{2}}{r_{12}^{3}}&space;&plus;\frac{q_{1}q''_{2}}{r_{12}^{3}}&space;\right&space;)\vec{r_{12}}=\vec{F'_{12}}&plus;\vec{F''_{12}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?F_{12}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q_{1}\left&space;(&space;q'_{2}&plus;q''_{2}&space;\right&space;)}{r_{12}^{3}}\vec{r_{12}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\left&space;(&space;\frac{q_{1}q'_{2}}{r_{12}^{3}}&space;&plus;\frac{q_{1}q''_{2}}{r_{12}^{3}}&space;\right&space;)\vec{r_{12}}=\vec{F'_{12}}&plus;\vec{F''_{12}}" title="F_{12}=\frac{1}{4\pi \varepsilon _{0}}\frac{q_{1}\left ( q'_{2}+q''_{2} \right )}{r_{12}^{3}}\vec{r_{12}}=\frac{1}{4\pi \varepsilon _{0}}\left ( \frac{q_{1}q'_{2}}{r_{12}^{3}} +\frac{q_{1}q''_{2}}{r_{12}^{3}} \right )\vec{r_{12}}=\vec{F'_{12}}+\vec{F''_{12}}" /></a>  
   这表示，两个电荷之间的库仑力不因第三个电荷的存在而改变，所以库仑定律满足叠加原理。  
+  - 关于CGSE与MKSA之间的关系：对于MKSA制，假设<a href="https://www.codecogs.com/eqnedit.php?latex=q_{1}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{1}" title="q_{1}" /></a>和<a href="https://www.codecogs.com/eqnedit.php?latex=q_{2}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{2}" title="q_{2}" /></a>均为1C，
+且<a href="https://www.codecogs.com/eqnedit.php?latex=r_{12}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?r_{12}" title="r_{12}" /></a>为1米（m），则此时<a href="https://www.codecogs.com/eqnedit.php?latex=F_{12}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?F_{12}" title="F_{12}" /></a>的值约为<a href="https://www.codecogs.com/eqnedit.php?latex=9\times&space;10^{9}N" target="_blank"><img src="https://latex.codecogs.com/gif.latex?9\times&space;10^{9}N" title="9\times 10^{9}N" /></a>。
+对于CGSE制，假设<a href="https://www.codecogs.com/eqnedit.php?latex=q_{1}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{1}" title="q_{1}" /></a>和<a href="https://www.codecogs.com/eqnedit.php?latex=q_{2}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?q_{2}" title="q_{2}" /></a>均为1CGSE（静库），
+<a href="https://www.codecogs.com/eqnedit.php?latex=k" target="_blank"><img src="https://latex.codecogs.com/gif.latex?k" title="k" /></a>等于1，且<a href="https://www.codecogs.com/eqnedit.php?latex=r_{12}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?r_{12}" title="r_{12}" /></a>为1厘米（cm），且
+<a href="https://www.codecogs.com/eqnedit.php?latex=F_{12}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?F_{12}" title="F_{12}" /></a>为1dyn（<a href="https://www.codecogs.com/eqnedit.php?latex=10^{-5}N" target="_blank"><img src="https://latex.codecogs.com/gif.latex?10^{-5}N" title="10^{-5}N" /></a>）。
+因为两种情况下等式都是成立的，所以得出的结果是<a href="https://www.codecogs.com/eqnedit.php?latex=1C^{2}/m^{2}=9\times&space;10^{9}N" target="_blank"><img src="https://latex.codecogs.com/gif.latex?1C^{2}/m^{2}=9\times&space;10^{9}N" title="1C^{2}/m^{2}=9\times 10^{9}N" /></a>和
+<a href="https://www.codecogs.com/eqnedit.php?latex=1CGSE^{2}/m^{2}=10^{-9}N" target="_blank"><img src="https://latex.codecogs.com/gif.latex?1CGSE^{2}/m^{2}=10^{-9}N" title="1CGSE^{2}/m^{2}=10^{-9}N" /></a>。从而，得
+<a href="https://www.codecogs.com/eqnedit.php?latex=1CGSE=\frac{1}{3}\times&space;10^{-9}C" target="_blank"><img src="https://latex.codecogs.com/gif.latex?1CGSE=\frac{1}{3}\times&space;10^{-9}C" title="1CGSE=\frac{1}{3}\times 10^{-9}C" /></a>。  
   
