Update item 2 with materials

--- a/2.电场强度.md
+++ b/2.电场强度.md
@@ -4,4 +4,38 @@
 ![电场强度](./materials/1.PNG)        
 电场强度反映了电场本身的性质，是与试探电荷q<sub>0</sub>无关的一个矢量，其<font color=red>大小</font>等于单位电荷在该处所受电场力的大小，其方向与正电荷在该处所受电场力的方向一致。  
 4. 匀强电场：如果空间中各点场强大小和方向都相同，这种电场叫做匀强电场。  
-5. 电场强度的单位为N/C，或者为V/m。  
+5. 电场强度的单位为N/C，或者为V/m。 
+6. 点电荷的场强：<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E}=\frac{\vec{F}}{q_{0}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{r^{2}}\hat{r}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E}=\frac{\vec{F}}{q_{0}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{r^{2}}\hat{r}" title="\vec{E}=\frac{\vec{F}}{q_{0}}=\frac{1}{4\pi \varepsilon _{0}}\frac{q}{r^{2}}\hat{r}" /></a>   
+点电荷具有如下特点：
+- E的方向处处沿以q为中心的矢径（q>0）或其反方向（q<0）；
+- E的大小只与距离r有关，所以在以q为中心的每个球面上的场强的大小相等。通常说，这样的电场是球对称的。
+- E与r<sup>2</sup>成反比，当r→∞时，E→0。  
+7. 场强叠加原理：点电荷组所产生的电场在某点的场强等于各点电荷单独存在时所产生的电场在该点场强的矢量叠加，称为场强叠加原理。  
+8. 电偶极子的电场，如图，分别求其中垂线上一点P'和延长线上一点P的场强。  
+![电偶极子](./materials/2.PNG)   
+- 对于延长线上：正电荷在P点产生的场强<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E_{&plus;}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}\hat{r}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E_{&plus;}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}\hat{r}" title="\vec{E_{+}}=\frac{1}{4\pi \varepsilon _{0}}\frac{q}{\left ( r-\frac{l}{2} \right )^{2}}\hat{r}" /></a>，
+负电荷在P点产生的场强<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E_{-}}=-\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}\hat{r}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E_{-}}=-\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}\hat{r}" title="\vec{E_{-}}=-\frac{1}{4\pi \varepsilon _{0}}\frac{q}{\left ( r+\frac{l}{2} \right )^{2}}\hat{r}" /></a>，
+那么P点的总场强为<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E}=\vec{E_{&plus;}}&plus;\vec{E_{-}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}\hat{r}-\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}\hat{r}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E}=\vec{E_{&plus;}}&plus;\vec{E_{-}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}\hat{r}-\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}\hat{r}" title="\vec{E}=\vec{E_{+}}+\vec{E_{-}}=\frac{1}{4\pi \varepsilon _{0}}\frac{q}{\left ( r-\frac{l}{2} \right )^{2}}\hat{r}-\frac{1}{4\pi \varepsilon _{0}}\frac{q}{\left ( r+\frac{l}{2} \right )^{2}}\hat{r}" /></a>。  
+因为<a href="https://www.codecogs.com/eqnedit.php?latex=\frac{1}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}-\frac{1}{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}=\frac{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}-\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}=\frac{2lr}{\left&space;(&space;r^{2}&space;-\frac{l^{2}}{4}\right&space;)^{2}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\frac{1}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}-\frac{1}{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}=\frac{\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}-\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}}{\left&space;(&space;r-\frac{l}{2}&space;\right&space;)^{2}\left&space;(&space;r&plus;\frac{l}{2}&space;\right&space;)^{2}}=\frac{2lr}{\left&space;(&space;r^{2}&space;-\frac{l^{2}}{4}\right&space;)^{2}}" title="\frac{1}{\left ( r-\frac{l}{2} \right )^{2}}-\frac{1}{\left ( r+\frac{l}{2} \right )^{2}}=\frac{\left ( r+\frac{l}{2} \right )^{2}-\left ( r-\frac{l}{2} \right )^{2}}{\left ( r-\frac{l}{2} \right )^{2}\left ( r+\frac{l}{2} \right )^{2}}=\frac{2lr}{\left ( r^{2} -\frac{l^{2}}{4}\right )^{2}}" /></a>  
+如果<a href="https://www.codecogs.com/eqnedit.php?latex=r\gg&space;l" target="_blank"><img src="https://latex.codecogs.com/gif.latex?r\gg&space;l" title="r\gg l" /></a>，则上式可近似化为
+<a href="https://www.codecogs.com/eqnedit.php?latex=\frac{2l}{r^{3}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\frac{2l}{r^{3}}" title="\frac{2l}{r^{3}}" /></a>，故   
+<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2ql}{r^{3}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2ql}{r^{3}}" title="\vec{E}\approx \frac{1}{4\pi \varepsilon _{0}}\frac{2ql}{r^{3}}" /></a>。  
+- 对于中垂线上：正电荷在P'产生的场强<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E_{&plus;}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r^{2}&plus;\frac{l^{2}}{4}&space;\right&space;)}\vec{{r}'}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E_{&plus;}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r^{2}&plus;\frac{l^{2}}{4}&space;\right&space;)}\vec{{r}'}" title="\vec{E_{+}}=\frac{1}{4\pi \varepsilon _{0}}\frac{q}{\left ( r^{2}+\frac{l^{2}}{4} \right )}\vec{{r}'}" /></a>，
+对于负电荷在P'产生的场强<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E_{-}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r^{2}-\frac{l^{2}}{4}&space;\right&space;)}\vec{{r}''}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E_{-}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{q}{\left&space;(&space;r^{2}-\frac{l^{2}}{4}&space;\right&space;)}\vec{{r}''}" title="\vec{E_{-}}=\frac{1}{4\pi \varepsilon _{0}}\frac{q}{\left ( r^{2}-\frac{l^{2}}{4} \right )}\vec{{r}''}" /></a>，
+那么总场强为<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E}=\vec{E_{&plus;}}&plus;\vec{E_{-}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E}=\vec{E_{&plus;}}&plus;\vec{E_{-}}" title="\vec{E}=\vec{E_{+}}+\vec{E_{-}}" /></a>且
+<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E_{&plus;}}&plus;\vec{E_{-}}=E_{&plus;}cos\theta&space;(-\vec{i})&plus;E_{&plus;}sin\theta&space;\vec{j}&plus;E_{-}cos\theta&space;(-\vec{i})&plus;E_{-}sin\theta&space;(-\vec{j})" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E_{&plus;}}&plus;\vec{E_{-}}=E_{&plus;}cos\theta&space;(-\vec{i})&plus;E_{&plus;}sin\theta&space;\vec{j}&plus;E_{-}cos\theta&space;(-\vec{i})&plus;E_{-}sin\theta&space;(-\vec{j})" title="\vec{E_{+}}+\vec{E_{-}}=E_{+}cos\theta (-\vec{i})+E_{+}sin\theta \vec{j}+E_{-}cos\theta (-\vec{i})+E_{-}sin\theta (-\vec{j})" /></a>，同时
+<a href="https://www.codecogs.com/eqnedit.php?latex=|E_{&plus;}|=|E_{-}|" target="_blank"><img src="https://latex.codecogs.com/gif.latex?|E_{&plus;}|=|E_{-}|" title="|E_{+}|=|E_{-}|" /></a>故
+<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{E}=E_{&plus;}cos\theta&space;\left&space;(&space;-\vec{i}&space;\right&space;)&plus;E_{-}cos\theta&space;(-\vec{i})=2E_{&plus;}cos\theta&space;\left&space;(&space;-\vec{i}&space;\right&space;)" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{E}=E_{&plus;}cos\theta&space;\left&space;(&space;-\vec{i}&space;\right&space;)&plus;E_{-}cos\theta&space;(-\vec{i})=2E_{&plus;}cos\theta&space;\left&space;(&space;-\vec{i}&space;\right&space;)" title="\vec{E}=E_{+}cos\theta \left ( -\vec{i} \right )+E_{-}cos\theta (-\vec{i})=2E_{+}cos\theta \left ( -\vec{i} \right )" /></a>，
+因为<a href="https://www.codecogs.com/eqnedit.php?latex=cos\theta&space;=\frac{\frac{l}{2}}{\sqrt{r^{2}&plus;\frac{l^{2}}{4}}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?cos\theta&space;=\frac{\frac{l}{2}}{\sqrt{r^{2}&plus;\frac{l^{2}}{4}}}" title="cos\theta =\frac{\frac{l}{2}}{\sqrt{r^{2}+\frac{l^{2}}{4}}}" /></a>，那么
+<a href="https://www.codecogs.com/eqnedit.php?latex=|\vec{E}|=2|\vec{E_{&plus;}}|cos\theta&space;=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2q}{r^{2}&plus;\frac{l^{2}}{4}}\cdot&space;\frac{\frac{l}{2}}{\sqrt{r^{2}&plus;\frac{l^{2}}{4}}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{ql}{\left&space;(&space;r^{2}&space;&plus;\frac{l^{2}}{4}\right&space;)^{\frac{3}{2}}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?|\vec{E}|=2|\vec{E_{&plus;}}|cos\theta&space;=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2q}{r^{2}&plus;\frac{l^{2}}{4}}\cdot&space;\frac{\frac{l}{2}}{\sqrt{r^{2}&plus;\frac{l^{2}}{4}}}=\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{ql}{\left&space;(&space;r^{2}&space;&plus;\frac{l^{2}}{4}\right&space;)^{\frac{3}{2}}}" title="|\vec{E}|=2|\vec{E_{+}}|cos\theta =\frac{1}{4\pi \varepsilon _{0}}\frac{2q}{r^{2}+\frac{l^{2}}{4}}\cdot \frac{\frac{l}{2}}{\sqrt{r^{2}+\frac{l^{2}}{4}}}=\frac{1}{4\pi \varepsilon _{0}}\frac{ql}{\left ( r^{2} +\frac{l^{2}}{4}\right )^{\frac{3}{2}}}" /></a>，
+当<a href="https://www.codecogs.com/eqnedit.php?latex=r\gg&space;l" target="_blank"><img src="https://latex.codecogs.com/gif.latex?r\gg&space;l" title="r\gg l" /></a>时，
+<a href="https://www.codecogs.com/eqnedit.php?latex=\frac{l}{\left&space;(&space;r^{2}&space;&plus;\frac{l^{2}}{4}\right&space;)^{\frac{3}{2}}}\approx&space;\frac{l}{r^{3}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\frac{l}{\left&space;(&space;r^{2}&space;&plus;\frac{l^{2}}{4}\right&space;)^{\frac{3}{2}}}\approx&space;\frac{l}{r^{3}}" title="\frac{l}{\left ( r^{2} +\frac{l^{2}}{4}\right )^{\frac{3}{2}}}\approx \frac{l}{r^{3}}" /></a>，
+则<a href="https://www.codecogs.com/eqnedit.php?latex=|\vec{E}|\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{ql}{r^{3}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?|\vec{E}|\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{ql}{r^{3}}" title="|\vec{E}|\approx \frac{1}{4\pi \varepsilon _{0}}\frac{ql}{r^{3}}" /></a>。  
+综上：  
+- 电偶极子的场强与距离r的三次方成反比，它比点电荷的场强随r递减的速度快得多。
+- 电偶极子的场强只与q和l的乘积有关。譬如q增大一倍而l减少一半，电偶极子在远处产生的场强不变。
+- q和l的乘积是描述电偶极子属性的一个物理量通常叫它电偶极矩，用p表示，即p=ql，通常l是从负电荷指向正电荷，即<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{p}=q\vec{l}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{p}=q\vec{l}" title="\vec{p}=q\vec{l}" /></a>，那么电偶极子延长线和中垂线的场强为：
+<a href="https://www.codecogs.com/eqnedit.php?latex=\left\{\begin{matrix}&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2\vec{p}}{r^{3}}\\&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{\left&space;(&space;-\vec{p}&space;\right&space;)}{r^{3}}&space;\end{matrix}\right." target="_blank"><img src="https://latex.codecogs.com/gif.latex?\left\{\begin{matrix}&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2\vec{p}}{r^{3}}\\&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{\left&space;(&space;-\vec{p}&space;\right&space;)}{r^{3}}&space;\end{matrix}\right." title="\left\{\begin{matrix} \vec{E}\approx \frac{1}{4\pi \varepsilon _{0}}\frac{2\vec{p}}{r^{3}}\\ \vec{E}\approx \frac{1}{4\pi \varepsilon _{0}}\frac{\left ( -\vec{p} \right )}{r^{3}} \end{matrix}\right." /></a>  
+式中，上面为延长线上的场强，下面为中垂线上的场强。这里只给出了两个特殊未知的场强。
+
+
