Update item 2 with its materials

--- a/2.电场强度.md
+++ b/2.电场强度.md
@@ -36,6 +36,49 @@
 - 电偶极子的场强只与q和l的乘积有关。譬如q增大一倍而l减少一半，电偶极子在远处产生的场强不变。
 - q和l的乘积是描述电偶极子属性的一个物理量通常叫它电偶极矩，用p表示，即p=ql，通常l是从负电荷指向正电荷，即<a href="https://www.codecogs.com/eqnedit.php?latex=\vec{p}=q\vec{l}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\vec{p}=q\vec{l}" title="\vec{p}=q\vec{l}" /></a>，那么电偶极子延长线和中垂线的场强为：
 <a href="https://www.codecogs.com/eqnedit.php?latex=\left\{\begin{matrix}&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2\vec{p}}{r^{3}}\\&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{\left&space;(&space;-\vec{p}&space;\right&space;)}{r^{3}}&space;\end{matrix}\right." target="_blank"><img src="https://latex.codecogs.com/gif.latex?\left\{\begin{matrix}&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{2\vec{p}}{r^{3}}\\&space;\vec{E}\approx&space;\frac{1}{4\pi&space;\varepsilon&space;_{0}}\frac{\left&space;(&space;-\vec{p}&space;\right&space;)}{r^{3}}&space;\end{matrix}\right." title="\left\{\begin{matrix} \vec{E}\approx \frac{1}{4\pi \varepsilon _{0}}\frac{2\vec{p}}{r^{3}}\\ \vec{E}\approx \frac{1}{4\pi \varepsilon _{0}}\frac{\left ( -\vec{p} \right )}{r^{3}} \end{matrix}\right." /></a>  
-式中，上面为延长线上的场强，下面为中垂线上的场强。这里只给出了两个特殊未知的场强。
+式中，上面为延长线上的场强，下面为中垂线上的场强。这里只给出了两个特殊未知的场强。  
+9. 电荷的连续分布  
+从微观结构来看，电荷集中在一个个带电的微观粒子（如电子，原子核等）上边。但从宏观效果来看，人们往往把电荷看作是连续分布的。根据不同的情况，有时把电荷看成在一定体积上连续分布（体分布），有时把电荷看成一定曲面上
+连续分布（面分布），有时把电荷看成一定曲线上连续分布（线分布），等等。因此，需要引入电荷的体密度，面密度和线密度等概念。  
+体密度的定义为：  
+![体密度](./materials/3.gif)   
+应该指出的是，这里“△V→0”是一种数学上的抽象，实际上只要△V在宏观上看起来足够小就行，但在其中还是包含了大量的微观粒子，∑q就是它们带电量的代数总和。由此可见，电荷体密度的概念实际上包含了对一定的宏观体积取平均的意思，
+平均的结果便从微观的不连续过渡到宏观的连续分布。  
+电荷的面密度的定义：  
+![面密度](./materials/4.gif)     
+和△V一样，△S也应是微观看很大，宏观看很小的。  
+线密度的定义：  
+![线密度](./materials/5.gif)   
+同理，△l也应微观看很大，宏观看很小的。   
+10. 如图，求P点的场强，设棒长为2l，带电总量为q。  
+![带电细棒](./materials/6.PNG)   
+根据已知条件，可得细棒的电荷线密度为  
+![线密度](./materials/7.gif)  
+设距O点为Z的有一小段dz对P点产生的电场为  
+![dE](./materials/8.gif)   
+此电场强度可以分为平行于棒和垂直于棒的分量，根据对称性，可以得到平行于棒的分量相互抵消为0，则只剩垂直于棒的分量。即   
+![dE](./materials/9.gif)   
+则整个棒产生的场强为  
+![E](./materials/10.gif)   
+利用变量代换法，设z=rtanθ，可求得  
+![积分](./materials/11.gif)   
+的积分为  
+![积分](./materials/12.gif)  
+即求得整个细棒的场强为  
+![E](./materials/13.gif)  
+当细棒为无限长时，任何垂直于它的平面都可看成中垂面。所以无限长细棒周围任何地方的电场都与棒垂直。上面的结果，取l→∞时的极限，即得这时的场强为   
+![E](./materials/14.gif)   
+上式表明，E与r成反比。对于有限长细棒来说，在靠近其中部附近区域（r远远小于l)也近似成立。   
+11. 电偶极子在匀强电场所受到的力矩。  
+如图，力矩为力臂沿转动轴垂直于力方向的分量。正负电荷对力矩均有贡献，它们产生的总力矩为   
+![力矩](./materials/15.PNG)   
+![力矩](./materials/16.gif)  
+用矢量式表示为
+![力矩](./materials/17.gif)  
+又因为电偶极矩  
+![电偶极矩](./materials/18.gif)   
+为从负电荷指向正电荷，所以电偶极子所受力矩又可写为   
+![力矩](./materials/19.gif)   
+ 
 
 
