--- a/3.通量.md
+++ b/3.通量.md
@@ -64,7 +64,7 @@
 一个系统在任何操作或变换下的不变性，都是“对称性”，例如绕固定轴旋转的不变性是轴对称性，绕固定点旋转的不变性是球对称性，沿特定方向平移的不变性是平移对称性，等等。在对称的条件下，必然有对称的结果，例如绕固定轴旋转的不变性是轴对称性，绕固定点旋转的不变性是球对称性，沿特定方向平移的不变性是平移对称性，等等。在对称的条件下，必然有对称的结果，例   
 点电荷具有球对称性，故电场的分布必然是球对称的，这便是“对称性原理”。除旋转、平移等操作外，还有一种几何变换具有特殊的重要作用，即“空间反射”操作，在空间反射变换下的不变性叫做镜像对称性。
 对于极矢量，与镜面垂直的分量反向，与镜面平行的分量不变；而轴矢量恰恰相反，与镜面垂直的分量不变，平行分量反向。并且两个极矢量叉乘得到的是轴矢量。如下所示：   
-![jm](./materials/41.jpg)   
+![jm](./materials/41.gif)   
 取z轴作为镜面的法向，则     
 ![42](./materials/42.gif)    
 即![43](./materials/43.gif)为轴矢量。    
